@@ -3,13 +3,11 @@ package it.gov.pagopa.bizeventsservice.mapper;
 import it.gov.pagopa.bizeventsservice.entity.view.BizEventsViewCart;
 import it.gov.pagopa.bizeventsservice.entity.view.BizEventsViewGeneral;
 import it.gov.pagopa.bizeventsservice.entity.view.BizEventsViewUser;
-import it.gov.pagopa.bizeventsservice.model.response.transaction.CartItem;
-import it.gov.pagopa.bizeventsservice.model.response.transaction.InfoTransactionView;
-import it.gov.pagopa.bizeventsservice.util.DateValidator;
 import it.gov.pagopa.bizeventsservice.model.response.paidnotice.InfoNotice;
 import it.gov.pagopa.bizeventsservice.model.response.paidnotice.NoticeDetailResponse;
+import it.gov.pagopa.bizeventsservice.model.response.paidnotice.NoticeListItem;
 import it.gov.pagopa.bizeventsservice.model.response.transaction.*;
-
+import it.gov.pagopa.bizeventsservice.util.DateValidator;
 import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
@@ -22,27 +20,22 @@ import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 
 @Component
 public class ConvertViewsToTransactionDetailResponse {
-    private ConvertViewsToTransactionDetailResponse(){}
-    
-    private static String payeeCartName;
-    
-    private static final List<String> LIST_RECEIPT_DATE_FORMAT_IN = Arrays.asList("yyyy-MM-dd'T'HH:mm:ss");
+    private static final List<String> LIST_RECEIPT_DATE_FORMAT_IN = List.of("yyyy-MM-dd'T'HH:mm:ss");
     private static final String RECEIPT_DATE_FORMAT_OUT = "yyyy-MM-dd'T'HH:mm:ssX";
-    
-    @Value("${transaction.payee.cartName:Pagamento Multiplo}")
-    public void setPayeeCartName(String payeeCartNameValue){
-        payeeCartName = payeeCartNameValue;
+    private static String payeeCartName;
+    private ConvertViewsToTransactionDetailResponse() {
     }
 
     public static TransactionDetailResponse convertTransactionDetails(String taxCode, BizEventsViewGeneral bizEventsViewGeneral, List<BizEventsViewCart> listOfCartViews) {
         List<CartItem> listOfCartItems = new ArrayList<>();
         AtomicReference<BigDecimal> totalAmount = new AtomicReference<>(BigDecimal.ZERO);
-        
+
         for (BizEventsViewCart bizEventsViewCart : listOfCartViews) {
 
             listOfCartItems.add(
@@ -58,7 +51,7 @@ public class ConvertViewsToTransactionDetailResponse {
             BigDecimal amountExtracted = new BigDecimal(bizEventsViewCart.getAmount());
             totalAmount.updateAndGet(v -> v.add(amountExtracted));
         }
-        
+
         // PAGOPA-1763: if the tax code refers to a debtor, do not show the sections relating to the payer
         boolean isDebtor = bizEventsViewGeneral.getPayer() == null || !bizEventsViewGeneral.getPayer().getTaxCode().equals(taxCode);
         return TransactionDetailResponse.builder()
@@ -69,26 +62,26 @@ public class ConvertViewsToTransactionDetailResponse {
                                 .rrn(bizEventsViewGeneral.getRrn())
                                 .transactionDate(dateFormatZoned(bizEventsViewGeneral.getTransactionDate()))
                                 .pspName(bizEventsViewGeneral.getPspName())
-                                .walletInfo(isDebtor ? null:bizEventsViewGeneral.getWalletInfo())
-                                .payer(isDebtor ? null:bizEventsViewGeneral.getPayer())
+                                .walletInfo(isDebtor ? null : bizEventsViewGeneral.getWalletInfo())
+                                .payer(isDebtor ? null : bizEventsViewGeneral.getPayer())
                                 .amount(totalAmount.get().setScale(2, RoundingMode.UNNECESSARY).toString())
                                 .fee(StringUtils.isNotEmpty(bizEventsViewGeneral.getFee()) ? bizEventsViewGeneral.getFee().replace(',', '.') : bizEventsViewGeneral.getFee())
-                                .paymentMethod(isDebtor ? null:bizEventsViewGeneral.getPaymentMethod())
+                                .paymentMethod(isDebtor ? null : bizEventsViewGeneral.getPaymentMethod())
                                 .origin(bizEventsViewGeneral.getOrigin())
                                 .build()
                 )
                 .carts(listOfCartItems)
                 .build();
     }
-    
+
     public static NoticeDetailResponse convertPaidNoticeDetails(String taxCode, BizEventsViewGeneral bizEventsViewGeneral, List<BizEventsViewCart> listOfCartViews) {
         List<it.gov.pagopa.bizeventsservice.model.response.paidnotice.CartItem> listOfCartItems = new ArrayList<>();
         AtomicReference<BigDecimal> totalAmount = new AtomicReference<>(BigDecimal.ZERO);
-        
+
         for (BizEventsViewCart bizEventsViewCart : listOfCartViews) {
 
             listOfCartItems.add(
-            		it.gov.pagopa.bizeventsservice.model.response.paidnotice.CartItem.builder()
+                    it.gov.pagopa.bizeventsservice.model.response.paidnotice.CartItem.builder()
                             .subject(bizEventsViewCart.getSubject())
                             .amount(new BigDecimal(bizEventsViewCart.getAmount()).setScale(2, RoundingMode.UNNECESSARY).toString())
                             .debtor(bizEventsViewCart.getDebtor())
@@ -100,7 +93,7 @@ public class ConvertViewsToTransactionDetailResponse {
             BigDecimal amountExtracted = new BigDecimal(bizEventsViewCart.getAmount());
             totalAmount.updateAndGet(v -> v.add(amountExtracted));
         }
-        
+
         // PAGOPA-1763: if the tax code refers to a debtor, do not show the sections relating to the payer
         boolean isDebtor = bizEventsViewGeneral.getPayer() == null || !bizEventsViewGeneral.getPayer().getTaxCode().equals(taxCode);
         return NoticeDetailResponse.builder()
@@ -111,11 +104,11 @@ public class ConvertViewsToTransactionDetailResponse {
                                 .rrn(bizEventsViewGeneral.getRrn())
                                 .noticeDate(dateFormatZoned(bizEventsViewGeneral.getTransactionDate()))
                                 .pspName(bizEventsViewGeneral.getPspName())
-                                .walletInfo(isDebtor ? null:bizEventsViewGeneral.getWalletInfo())
-                                .payer(isDebtor ? null:bizEventsViewGeneral.getPayer())
+                                .walletInfo(isDebtor ? null : bizEventsViewGeneral.getWalletInfo())
+                                .payer(isDebtor ? null : bizEventsViewGeneral.getPayer())
                                 .amount(totalAmount.get().setScale(2, RoundingMode.UNNECESSARY).toString())
                                 .fee(StringUtils.isNotEmpty(bizEventsViewGeneral.getFee()) ? bizEventsViewGeneral.getFee().replace(',', '.') : bizEventsViewGeneral.getFee())
-                                .paymentMethod(isDebtor ? null:bizEventsViewGeneral.getPaymentMethod())
+                                .paymentMethod(isDebtor ? null : bizEventsViewGeneral.getPaymentMethod())
                                 .origin(bizEventsViewGeneral.getOrigin())
                                 .build()
                 )
@@ -123,13 +116,28 @@ public class ConvertViewsToTransactionDetailResponse {
                 .build();
     }
 
-    public static TransactionListItem convertTransactionListItem(BizEventsViewUser viewUser, List<BizEventsViewCart> listOfCartViews){
+    public static List<NoticeListItem> convertToNoticeList(TransactionListResponse transactionListResponse) {
+        return transactionListResponse.getTransactionList().stream()
+                .map(elem -> NoticeListItem.builder()
+                        .eventId(elem.getTransactionId())
+                        .payeeName(elem.getPayeeName())
+                        .payeeTaxCode(elem.getPayeeTaxCode())
+                        .amount(elem.getAmount())
+                        .noticeDate(elem.getTransactionDate())
+                        .isCart(elem.getIsCart())
+                        .isPayer(elem.getIsPayer())
+                        .isDebtor(elem.getIsDebtor())
+                        .build())
+                .toList();
+    }
+
+    public static TransactionListItem convertTransactionListItem(BizEventsViewUser viewUser, List<BizEventsViewCart> listOfCartViews) {
         AtomicReference<BigDecimal> totalAmount = new AtomicReference<>(BigDecimal.ZERO);
         for (BizEventsViewCart bizEventsViewCart : listOfCartViews) {
             BigDecimal amountExtracted = new BigDecimal(bizEventsViewCart.getAmount());
             totalAmount.updateAndGet(v -> v.add(amountExtracted));
         }
-        
+
         return TransactionListItem.builder()
                 .transactionId(viewUser.getTransactionId())
                 .payeeName(listOfCartViews.size() > 1 ? payeeCartName : listOfCartViews.get(0).getPayee().getName())
@@ -142,24 +150,28 @@ public class ConvertViewsToTransactionDetailResponse {
                 .isDebtor(BooleanUtils.isTrue(viewUser.getIsDebtor()))
                 .build();
     }
-    
+
     private static String dateFormatZoned(String date) {
-    	String dateSub = StringUtils.substringBeforeLast(date, ".");
-    	if (!DateValidator.isValid(dateSub, RECEIPT_DATE_FORMAT_OUT)) {
-    		return dateFormat(dateSub);
-    	} 	
-    	return dateSub;
+        String dateSub = StringUtils.substringBeforeLast(date, ".");
+        if (!DateValidator.isValid(dateSub, RECEIPT_DATE_FORMAT_OUT)) {
+            return dateFormat(dateSub);
+        }
+        return dateSub;
     }
-    
-   
-    private static String dateFormat(String date) { 	
-    	for (String format: LIST_RECEIPT_DATE_FORMAT_IN) {
-    		if (DateValidator.isValid(date, format)) {
-    			LocalDateTime ldt = LocalDateTime.parse(date, DateTimeFormatter.ofPattern(format));
-        		ZonedDateTime zdt = ZonedDateTime.of(ldt, ZoneOffset.UTC);   
-        		return DateTimeFormatter.ofPattern(RECEIPT_DATE_FORMAT_OUT).format(zdt);
-    		}
-    	}
-    	throw new DateTimeException("The date ["+date+"] is not in one of the expected formats "+LIST_RECEIPT_DATE_FORMAT_IN+" and cannot be parsed");
+
+    private static String dateFormat(String date) {
+        for (String format : LIST_RECEIPT_DATE_FORMAT_IN) {
+            if (DateValidator.isValid(date, format)) {
+                LocalDateTime ldt = LocalDateTime.parse(date, DateTimeFormatter.ofPattern(format));
+                ZonedDateTime zdt = ZonedDateTime.of(ldt, ZoneOffset.UTC);
+                return DateTimeFormatter.ofPattern(RECEIPT_DATE_FORMAT_OUT).format(zdt);
+            }
+        }
+        throw new DateTimeException("The date [" + date + "] is not in one of the expected formats " + LIST_RECEIPT_DATE_FORMAT_IN + " and cannot be parsed");
+    }
+
+    @Value("${transaction.payee.cartName:Pagamento Multiplo}")
+    public void setPayeeCartName(String payeeCartNameValue) {
+        payeeCartName = payeeCartNameValue;
     }
 }
